[package]
name = "coldplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.1"
nats = "0.23.1"
time = { version = "0.3", features = ["serde", "local-offset"]}
serde = "1.0.150"
serde_json = "1.0.89"
